<resources>
    <string name="app_name">CS_Quizzes</string>

    <!--question text-->
    <string name="question_one_true">Implementing algorithms on a computer often increases productivity.</string>
    <string name="question_two_true">Wireless data communications are 5th generation innovation in computing.</string>
    <string name="question_three_false">Computer Science is the study of computers.</string>
    <string name="question_four_false">All conceivable problems can be solved algorithmically.</string>
    <string name="question_five_true">The Leibniz wheel can carry out addition, subtraction, multiplication and division.</string>
    <string name="question_six_true">When and operation is unambiguous, we call it a primitive operation or simply a primitive of the computing agent carrying out the algorithms.</string>

    <!--buttons text-->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer_button">Show Answer!</string>

    <!--toast text-->
    <string name="correct_toast">You are Correct!</string>
    <string name="incorrect_toast">You are Wrong! Try again.</string>

    <!--warning text-->
    <string name="warning_text">Are you sure you want to do this?</string>

    <!--judgement text-->
    <string name="judgement_text">Cheating is Wrong!!!</string>
</resources>


